--- a/week2/index.html
+++ b/week2/index.html
@@ -6,7 +6,8 @@
         <link href="https://webfontworld.github.io/pretendard/Pretendard.css" rel="stylesheet">
         <link rel="stylesheet" href="/static/css/font.css">
         <link rel="stylesheet" href="/static/css/common.css">
-        <link rel="stylesheet" href="/static/css/index.css">
+        <link rel="stylesheet" href="/static/css/button.css">
+        <link rel="stylesheet" href="/static/css/main.css">
     </head>
     <body>
         <!-- 상단 gnb -->
@@ -16,14 +17,14 @@
                     <img src="/static/images/logo.png" alt="Linkbrary 로고" class="cursor-point">
                 </object>
             </a>
-            <a href="/signin.html"><button class="primary-btn sm">로그인</button></a> <!-- <a>태그로 감싸기 / onclick 넣기 -->
+            <a href="/signin.html" class="primary-btn sm">로그인</a>
         </header>
         <!-- 본문 -->
         <article>
             <!-- 영역 1 -->
             <section class="contents content-01">
                 <h1><span>세상의 모든 정보</span>를<br>쉽게 저장하고 관리해 보세요</h1>
-                <a href="/signup.html"><button class="primary-btn md">링크 추가하기</button></a>
+                <a href="/signup.html" class="primary-btn md">링크 추가하기</a>
                 <div class="wrap-img">
                     <img src="/static/images/landing/content-01.png" alt="링크를 검색해보세요" class="link-search-img">
                     <div class="dim"></div>
@@ -31,11 +32,11 @@
             </section>
             <!-- 영역 2 -->
             <section class="contents content-02">
-                <div class="content-02-left content-txt">
+                <div class="content-02-txt content-txt">
                     <h1><span class="txt-gradient">원하는 링크</span>를<br>저장하세요</h1>
                     <p>나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br>사고 싶은 옷, 기억하고 싶은 모든 것을<br>한 공간에 저장하세요.</p>
                 </div>
-                <div class="content-02-right content-bg">
+                <div class="content-02-img content-bg">
                     <div class="card1">
                         <img src="/static/images/landing/content-02-card1.png" alt="이미지1" class="card">
                     </div>
@@ -51,33 +52,32 @@
             </section>
             <!-- 영역 3 -->
             <section class="contents content-03">
-                <div class="content-03-left content-bg">
+                <div class="content-03-img content-bg">
                     <img src="/static/images/landing/content-03.png" alt="폴더 이름 변경하기">
                 </div>
-                <div class="content-03-right content-txt">
+                <div class="content-03-txt content-txt">
                     <h1>링크를 폴더로<br><span class="txt-gradient">관리</span>하세요</h1>
                     <p>나만의 폴더를 무제한으로 만들고<br>다양하게 활용할 수 있습니다.</p>
                 </div>
             </section>
             <!-- 영역 4 -->
             <section class="contents content-04">
-                <div class="content-04-left content-txt">
+                <div class="content-04-txt content-txt">
                     <h1>저장한 링크를<br><span class="txt-gradient">공유</span>해 보세요.</h1>
                     <p>여러 링크를 폴더에 담고 공유할 수 있습니다.<br>가족, 친구, 동료들에게 쉽고 빠르게 링크를<br>공유해 보세요.</p>
                 </div>
-                <div class="content-04-right">
+                <div class="content-04-img">
                     <div class="dim"></div>
-                    <!-- <img src="/static/images/landing/content-01.png" alt="배경"> -->
                     <img src="/static/images/landing/content-04-popup.png" alt="폴더 공유하기" class="popup">
                 </div>
             </section>
             <!-- 영역 5 -->
             <section class="contents content-05">
-                <div class="content-05-left content-bg">
+                <div class="content-05-img content-bg">
                     <img src="/static/images/landing/content-05.png" alt="코드잇으로 검색한 결과입니다">
                     <div class="dim"></div>
                 </div>
-                <div class="content-05-right content-txt">
+                <div class="content-05-txt content-txt">
                     <h1>저장한 링크를<br><span class="txt-gradient">검색</span>해 보세요</h1>
                     <p>중요한 정보들을 검색으로 쉽게 찾아보세요.</p>
                 </div>
