--- a/week2/signup.html
+++ b/week2/signup.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Linkbrary 회원가임</title>
-        <link rel="stylesheet" href="/static/css/font.css">
         <link href="https://webfontworld.github.io/pretendard/Pretendard.css" rel="stylesheet">
+        <link rel="stylesheet" href="/static/css/font.css">
         <link rel="stylesheet" href="/static/css/common.css">
-        <link rel="stylesheet" href="/static/css/signinup.css">
+        <link rel="stylesheet" href="/static/css/button.css">
+        <link rel="stylesheet" href="/static/css/auth.css">
     </head>
     <body class="signup">
         <header>
@@ -25,31 +26,31 @@
             <div class="wrap-input">
                 <p>비밀번호</p>
                 <input type="password" class="input-txt" placeholder="ㆍㆍㆍㆍㆍㆍ">
-                <object data="/static/images/signinup/eye-off.svg" type="image/svg+xml" class="eye-off">
-                    <img src="/static/images/signinup/eye-off.png" alt="비밀번호 표시" class="cursor-point" class="eye-off">
+                <object data="/static/images/auth/eye-off.svg" type="image/svg+xml" class="eye-off">
+                    <img src="/static/images/auth/eye-off.png" alt="비밀번호 표시" class="cursor-point" class="eye-off">
                 </object>
             </div>
             <div class="wrap-input">
                 <p>비밀번호 확인</p>
                 <input type="password" class="input-txt wrong" placeholder="ㆍㆍㆍㆍㆍㆍ">
-                <object data="/static/images/signinup/eye-off.svg" type="image/svg+xml" class="eye-off">
-                    <img src="/static/images/signinup/eye-off.png" alt="비밀번호 표시" class="cursor-point" class="eye-off">
+                <object data="/static/images/auth/eye-off.svg" type="image/svg+xml" class="eye-off">
+                    <img src="/static/images/auth/eye-off.png" alt="비밀번호 표시" class="cursor-point" class="eye-off">
                 </object>
             </div>
             <p class="txt-wrong">비밀번호가 다릅니다</p>
-            <a href="/signup.html"><button class="primary-btn lg">회원가입</button></a>
+            <a href="/signup.html" class="primary-btn lg">회원가입</a>
         </main>
         <footer>
             <p>다른 방식으로 가입하기</p>
             <div class="wrap-icon">
                 <a href="https://www.google.com/" target="_blank" class="social-login-icon google">
-                    <object data="/static/images/signinup/icon-google.svg" type="image/svg+xml">
-                        <img src="/static/images/signinup/icon-google.png" alt="구글아이콘" class="cursor-point">
+                    <object data="/static/images/auth/icon-google.svg" type="image/svg+xml">
+                        <img src="/static/images/auth/icon-google.png" alt="구글아이콘" class="cursor-point">
                     </object>
                 </a>
                 <a href="https://www.kakaocorp.com/page/" target="_blank" class="social-login-icon">
-                    <object data="/static/images/signinup/icon-kakao.svg" type="image/svg+xml">
-                        <img src="/static/images/signinup/icon-kakao.png" alt="카카오아이콘" class="cursor-point">
+                    <object data="/static/images/auth/icon-kakao.svg" type="image/svg+xml">
+                        <img src="/static/images/auth/icon-kakao.png" alt="카카오아이콘" class="cursor-point">
                     </object>
                 </a>
             </div>
