--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -10,7 +10,11 @@
 
 <body>
     <header>
-        <h1><a href="/"><img src="img/logo.svg" alt="Linkbrary" class="logo"></a>Linkbrary</h1>
+        <h1>
+            <a href="/">
+                <img src="img/logo.svg" alt="Linkbrary" class="sign-logo">
+            </a>Linkbrary
+        </h1>
 
         <div id="login" class="btn">
             <a href="/signin.html" class="btn-link"><span class="btn-font">로그인</span></a>
