--- a/Linkbrary/signin.html
+++ b/Linkbrary/signin.html
@@ -13,7 +13,11 @@
     <main>
         <div class="sign">
             <div class="sign-top">
-                <h1><a href="/"><img src="img/logo.svg" alt="Linkbrary" class="sign-logo"></a>Linkbrary</h1>
+                <h1>
+                    <a href="/">
+                        <img src="img/logo.svg" alt="Linkbrary" class="sign-logo">
+                    </a>Linkbrary
+                </h1>
                 <div class="join">
                     <span>회원이 아니신가요?</span>
                     <a href="/signup.html" class="sign-link">회원 가입하기</a>
@@ -44,7 +48,9 @@
                         소셜 로그인
                     </div>
                     <div class="social-links">
-                        <a href="https://www.google.com/" target="_blank"><img src="img/google.svg" alt=""></a>
+                        <a href="https://www.google.com/" target="_blank">
+                            <img src="img/google.svg" alt="">
+                        </a>
                         <a href="https://www.kakaocorp.com/page/" target="_blank">
                             <img src="img/kakao.svg" alt="" class="img-border">
                         </a>
