--- a/Linkbrary/signup.html
+++ b/Linkbrary/signup.html
@@ -13,7 +13,11 @@
     <main>
         <div class="sign">
             <div class="sign-top">
-                <h1><a href="/"><img src="img/logo.svg" alt="Linkbrary" class="sign-logo"></a>Linkbrary</h1>
+                <h1>
+                    <a href="/">
+                        <img src="img/logo.svg" alt="Linkbrary" class="sign-logo">
+                    </a>Linkbrary
+                </h1>
                 <div class="join">
                     <span>이미 회원이신가요?</span>
                     <a href="/signin.html" class="sign-link">로그인 하기</a>
