refactor: Remove 'btn-class' class attributes from the document

--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="btn" id="link-add">
-            <a href="/signup.html" class="btn-link"><span class="btn-font">링크 추가하기</span></a>
+            <a href="/signup.html" class="btn-link">링크 추가하기</a>
         </div>
 
         <section id="s1">
