--- a/Linkbrary/privacy.html
+++ b/Linkbrary/privacy.html
@@ -17,7 +17,7 @@
         </h1>
 
         <div id="login" class="btn">
-            <a href="signin.html" class="btn-link"><span class="btn-font">로그인</span></a>
+            <a href="signin.html" class="btn-link">로그인</a>
 
         </div>
     </header>
