--- a/Linkbrary/signup.html
+++ b/Linkbrary/signup.html
@@ -62,7 +62,9 @@
                         다른 방식으로 가입하기
                     </div>
                     <div class="social-links">
-                        <a href="https://www.google.com/" target="_blank"><img src="img/google.svg" alt=""></a>
+                        <a href="https://www.google.com/" target="_blank">
+                            <img src="img/google.svg" alt="">
+                        </a>
                         <a href="https://www.kakaocorp.com/page/" target="_blank">
                             <img src="img/kakao.svg" alt="" class="img-border">
                         </a>
