fix: change id=login to class - header-login

--- a/Linkbrary/faq.html
+++ b/Linkbrary/faq.html
@@ -17,7 +17,7 @@
             </a>Linkbrary
         </h1>
 
-        <div id="login" class="btn">
+        <div class="btn header-login">
             <a href="signin.html" class="btn-link">로그인</a>
         </div>
     </header>
