--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -16,7 +16,7 @@
             </a>Linkbrary
         </h1>
 
-        <div id="login" class="btn">
+        <div class="btn header-login">
             <a href="/signin.html" class="btn-link"><span class="btn-font">로그인</span></a>
 
         </div>
