refactor : Remove unnecessary div elements

--- a/Linkbrary/privacy.html
+++ b/Linkbrary/privacy.html
@@ -16,7 +16,7 @@
             </a>Linkbrary
         </h1>
 
-        <div id="login" class="btn">
+        <div class="btn header-login">
             <a href="signin.html" class="btn-link">로그인</a>
 
         </div>
@@ -33,16 +33,14 @@
                 ©codeit - 2023
             </div>
             <div class="policy-bar">
-                <div>
-                    <a href="/privacy.html">
-                        Privacy Policy
-                    </a>
-                </div>
-                <div>
-                    <a href="/faq.html">
-                        FAQ
-                    </a>
-                </div>
+
+                <a href="/privacy.html">
+                    Privacy Policy
+                </a>
+
+                <a href="/faq.html">
+                    FAQ
+                </a>
 
             </div>
             <div class="info-link-bar">
