refactor : Unwrap unnecessary <div> tag from <a> element

--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -16,18 +16,15 @@
             </a>Linkbrary
         </h1>
 
-        <div class="btn header-login">
-            <a href="/signin.html" class="btn-link"><span class="btn-font">로그인</span></a>
-
-        </div>
+        <a href="/signin.html" class="btn header-login">로그인</a>
     </header>
     <main>
         <h2 class="top-heading">
             <span class="gradient1">세상의 모든 정보</span>를<br> 쉽게 저장하고 관리해 보세요
         </h2>
-        <div class="btn" id="link-add">
-            <a href="/signup.html" class="btn-link">링크 추가하기</a>
-        </div>
+
+        <a href="/signup.html" class="btn" id="link-add">링크 추가하기</a>
+
 
         <section id="s1">
             <div id="content1">
@@ -345,7 +342,7 @@
                     <div class="folder-change">
                         <h4 class="op-font">폴더 이름 변경</h4>
                         <input type="text" name="folder-name" class="folder-input" placeholder="내용 입력">
-                        <div class="btn folder-btn"><a href="#" class="btn-link">변경하기</a></div>
+                        <a href="#" class="btn folder-btn">변경하기</a>
                     </div>
 
                 </div>
