--- a/Linkbrary/privacy.html
+++ b/Linkbrary/privacy.html
@@ -16,10 +16,7 @@
             </a>Linkbrary
         </h1>
 
-        <div class="btn header-login">
-            <a href="signin.html" class="btn-link">로그인</a>
-
-        </div>
+        <a href="signin.html" class="btn header-login">로그인</a>
     </header>
     <main>
         <h2>
