--- a/Linkbrary/faq.html
+++ b/Linkbrary/faq.html
@@ -17,9 +17,7 @@
             </a>Linkbrary
         </h1>
 
-        <div class="btn header-login">
-            <a href="signin.html" class="btn-link">로그인</a>
-        </div>
+        <a href="signin.html" class="btn header-login">로그인</a>
     </header>
     <main>
         <h2>FAQ</h2>
