--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -13,7 +13,8 @@
         <h1>
             <a href="/">
                 <img src="img/logo.svg" alt="Linkbrary" class="sign-logo">
-            </a>Linkbrary
+            </a>
+            Linkbrary
         </h1>
 
         <a href="/signin.html" class="btn header-login">로그인</a>
