--- a/Linkbrary/signup.html
+++ b/Linkbrary/signup.html
@@ -16,7 +16,8 @@
                 <h1>
                     <a href="/">
                         <img src="img/logo.svg" alt="Linkbrary" class="sign-logo">
-                    </a>Linkbrary
+                    </a>
+                    Linkbrary
                 </h1>
                 <div class="join">
                     <span>이미 회원이신가요?</span>
