refactor : Remove unnecessary id search-link in style.css

--- a/Linkbrary/signup.html
+++ b/Linkbrary/signup.html
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                 </div>
-                <button class="btn login-btn signup-btn">회원가입</button>
+                <button class="btn login-btn">회원가입</button>
             </form>
             <div class="login">
                 <div class="other-id">
