--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <h2 class="top-heading">
-            <span class="gradient1">세상의 모든 정보</span>를<br> 쉽게 저장하고 관리해 보세요
+            <em class="gradient1">세상의 모든 정보</em>를<br> 쉽게 저장하고 관리해 보세요
         </h2>
 
         <a href="/signup.html" class="btn" id="link-add">링크 추가하기</a>
@@ -226,7 +226,7 @@
         <section id="s2">
             <div id="content2" class="container">
                 <div class="small-side">
-                    <h3><span class="gradient2">원하는 링크</span>를 저장하세요</h3>
+                    <h3><em class="gradient2">원하는 링크</em>를 저장하세요</h3>
                     <p class="description">
                         나중에 읽고 싶은 글, 다시 보고 싶은 영상,
                         사고 싶은 옷, 기억하고 싶은 모든 것을
@@ -342,7 +342,7 @@
                 <div class="small-side">
 
                     <h3>링크를 폴더로
-                        <span class="gradient3">관리</span>하세요
+                        <em class="gradient3">관리</em>하세요
                     </h3>
                     <p class="description">
                         나만의 폴더를 무제한으로 만들고
@@ -361,7 +361,7 @@
                 <div class="small-side">
 
                     <h3>저장한 링크를
-                        <span class="gradient4">공유</span>해 보세요.
+                        <em class="gradient4">공유</em>해 보세요.
                     </h3>
                     <p class="description">
                         여러 링크를 폴더에 담고 공유할 수 있습니다. 가족, 친구, 동료들에게 쉽고 빠르게 링크를
@@ -521,7 +521,7 @@
                 <div class="small-side">
 
                     <h3>저장한 링크를
-                        <span class="gradient5">검색</span>해 보세요
+                        <em class="gradient5">검색</em>해 보세요
                     </h3>
                     <p class="description">
                         중요한 정보들을 검색으로 쉽게 찾아보세요.
