refactor : Change <div> tags to <ul><li> applied in card lists

--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -49,8 +49,8 @@
                             <button class="folder-add">폴더 추가 +</button>
                         </div>
                     </div>
-                    <div class="link-cards">
-                        <div class="card">
+                    <ul class="link-cards">
+                        <li class="card">
                             <button class="add-favorite">
                                 <img src="img/star.svg" alt="" class="normal-star">
                                 <img src="img/purplestar.svg" alt="" class="purple-star">
@@ -77,8 +77,8 @@
                                 </div>
 
                             </div>
-                        </div>
-                        <div class="card card-selected">
+                        </li>
+                        <li class="card card-selected">
                             <button class="add-favorite">
                                 <img src="img/star.svg" alt="" class="normal-star">
                                 <img src="img/purplestar.svg" alt="" class="purple-star">
@@ -105,8 +105,8 @@
                                 </div>
 
                             </div>
-                        </div>
-                        <div class="card">
+                        </li>
+                        <li class="card">
                             <button class="add-favorite">
                                 <img src="img/purplestar.svg" alt="">
                             </button>
@@ -132,9 +132,9 @@
                                 </div>
 
                             </div>
-                        </div>
+                        </li>
 
-                        <div class="card">
+                        <li class="card">
                             <button class="add-favorite">
                                 <img src="img/star.svg" alt="" class="normal-star">
                                 <img src="img/purplestar.svg" alt="" class="purple-star">
@@ -162,8 +162,8 @@
                                     2024.2.21
                                 </div>
                             </div>
-                        </div>
-                        <div class="card">
+                        </li>
+                        <li class="card">
                             <button class="add-favorite">
                                 <img src="img/purplestar.svg" alt="">
                             </button>
@@ -188,8 +188,8 @@
                                     2024.2.21
                                 </div>
                             </div>
-                        </div>
-                        <div class="card">
+                        </li>
+                        <li class="card">
                             <button class="add-favorite">
                                 <img src="img/purplestar.svg" alt="">
                             </button>
@@ -215,9 +215,9 @@
                                 </div>
 
                             </div>
-                        </div>
+                        </li>
 
-                    </div>
+                    </ul>
                 </div>
             </div>
 
@@ -235,8 +235,8 @@
 
                 </div>
                 <div class="wide-side">
-                    <div class="card-row">
-                        <div class="card no-shrink-card">
+                    <ul class="card-row">
+                        <li class="card no-shrink-card">
                             <button class="add-favorite">
                                 <img src="img/star.svg" alt="" class="normal-star">
                                 <img src="img/purplestar.svg" alt="" class="purple-star">
@@ -263,9 +263,9 @@
                                 </div>
 
                             </div>
-                        </div>
+                        </li>
 
-                        <div class="card card-selected no-shrink-card">
+                        <li class="card card-selected no-shrink-card">
                             <button class="add-favorite">
                                 <img src="img/star.svg" alt="" class="normal-star">
                                 <img src="img/purplestar.svg" alt="" class="purple-star">
@@ -295,9 +295,9 @@
                             <button class="save-icon">
                                 <img src="img/save.svg" alt="save-icon">
                             </button>
-                        </div>
+                        </li>
 
-                        <div class="card no-shrink-card">
+                        <li class="card no-shrink-card">
                             <button class="add-favorite">
                                 <img src="img/purplestar.svg" alt="">
                             </button>
@@ -323,8 +323,8 @@
                                 </div>
 
                             </div>
-                        </div>
-                    </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
 
@@ -429,8 +429,8 @@
                                     <button class="folder-add">폴더 추가 +</button>
                                 </div>
                             </div>
-                            <div class="link-cards">
-                                <div class="card">
+                            <ul class="link-cards">
+                                <li class="card">
                                     <button class="add-favorite">
                                         <img src="img/star.svg" alt="" class="normal-star">
                                         <img src="img/purplestar.svg" alt="" class="purple-star">
@@ -457,8 +457,8 @@
                                         </div>
 
                                     </div>
-                                </div>
-                                <div class="card card-selected">
+                                </li>
+                                <li class="card card-selected">
                                     <button class="add-favorite">
                                         <img src="img/star.svg" alt="" class="normal-star">
                                         <img src="img/purplestar.svg" alt="" class="purple-star">
@@ -485,8 +485,8 @@
                                         </div>
 
                                     </div>
-                                </div>
-                                <div class="card">
+                                </li>
+                                <li class="card">
                                     <button class="add-favorite">
                                         <img src="img/purplestar.svg" alt="">
                                     </button>
@@ -512,8 +512,8 @@
                                         </div>
 
                                     </div>
-                                </div>
-                            </div>
+                                </li>
+                            </ul>
                         </div>
                     </div>
 
@@ -521,7 +521,7 @@
                 <div class="small-side">
 
                     <h3>저장한 링크를
-                        <em class="gradient5">검색</em>해 보세요
+                        <en class="gradient5">검색</en>해 보세요
                     </h3>
                     <p class="description">
                         중요한 정보들을 검색으로 쉽게 찾아보세요.
