refactor : Rename 'small-side' class to 'feature-description'

--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -225,7 +225,7 @@
 
         <section id="s2">
             <div id="content2" class="container">
-                <div class="small-side">
+                <div class="feature-description">
                     <h3><em class="gradient2">원하는 링크</em>를 저장하세요</h3>
                     <p class="description">
                         나중에 읽고 싶은 글, 다시 보고 싶은 영상,
@@ -339,7 +339,7 @@
                         <a href="#" class="btn folder-btn">변경하기</a>
                     </div>
                 </div>
-                <div class="small-side">
+                <div class="feature-description">
 
                     <h3>링크를 폴더로
                         <em class="gradient3">관리</em>하세요
@@ -358,7 +358,7 @@
 
             <div class="container">
 
-                <div class="small-side">
+                <div class="feature-description">
 
                     <h3>저장한 링크를
                         <em class="gradient4">공유</em>해 보세요.
@@ -518,7 +518,7 @@
                     </div>
 
                 </div>
-                <div class="small-side">
+                <div class="feature-description">
 
                     <h3>저장한 링크를
                         <en class="gradient5">검색</en>해 보세요
