refactor : Rename 'wide-side' class to 'feature-example-image'

--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -234,7 +234,7 @@
                     </p>
 
                 </div>
-                <div class="wide-side">
+                <div class="feature-example-image">
                     <ul class="card-row">
                         <li class="card no-shrink-card">
                             <button class="add-favorite">
@@ -332,7 +332,7 @@
 
 
             <div class="container">
-                <div class="wide-side">
+                <div class="feature-example-image">
                     <div class="folder-change">
                         <h4 class="op-font">폴더 이름 변경</h4>
                         <input type="text" name="folder-name" class="folder-input" placeholder="내용 입력">
@@ -369,9 +369,9 @@
                     </p>
 
                 </div>
-                <div class="wide-side">
+                <div class="feature-example-image">
                     <div class="share-bg">
-                        <img src="img/share-bg.png" alt="" class="wide-side">
+                        <img src="img/share-bg.png" alt="" class="feature-example-image">
                     </div>
                     <div class="folder-change">
                         <div class="folder-share">
@@ -404,7 +404,7 @@
             </div>
 
             <div class="container">
-                <div class="wide-side">
+                <div class="feature-example-image">
                     <div class="search-box">
                         <div class="search-bar"><input type="text" name="link-name" id="link-name" class="search-input"
                                 placeholder="코드잇">
