refactor : Replace <h4><h5> tags to <p> tag

--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -334,7 +334,7 @@
             <div class="container">
                 <div class="feature-example-image">
                     <div class="folder-change">
-                        <h4 class="op-font">폴더 이름 변경</h4>
+                        <p class="op-font">폴더 이름 변경</p>
                         <input type="text" name="folder-name" class="folder-input" placeholder="내용 입력">
                         <a href="#" class="btn folder-btn">변경하기</a>
                     </div>
@@ -375,8 +375,8 @@
                     </div>
                     <div class="folder-change">
                         <div class="folder-share">
-                            <h4 class="op-font">폴더 공유</h4>
-                            <h5 class="folder-name">폴더명</h5>
+                            <p class="op-font">폴더 공유</p>
+                            <p class="folder-name">폴더명</p>
                         </div>
 
                         <div class="folder-share-link">
@@ -384,19 +384,19 @@
                                 <a href="">
                                     <img src="img/kakao.svg" alt="kakao" class="share-link-logo">
                                 </a>
-                                <h4 class="share-link-name">카카오톡</h4>
+                                <p class="share-link-name">카카오톡</p>
                             </div>
                             <div class="share-link-btn">
                                 <a href="">
                                     <img src="img/facebook.svg" alt="kakao" class="share-link-logo">
                                 </a>
-                                <h4 class="share-link-name">페이스북</h4>
+                                <p class="share-link-name">페이스북</p>
                             </div>
                             <div class="share-link-btn">
                                 <a href="">
                                     <img src="img/copylink.png" alt="kakao" class="share-link-logo">
                                 </a>
-                                <h4 class="share-link-name">링크복사</h4>
+                                <p class="share-link-name">링크복사</p>
                             </div>
                         </div>
                     </div>
