Add : modal btn change

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/style.css">
     <title>Linkbrary</title>
+    <meta property="og:title" content="Linkbrary">
+    <meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요">
+    <meta property="og:image" content="https://www.freeiconspng.com/uploads/links-icon-30.jpg">
+    <meta property="og:url" content="https://linkbrary-hyejean.netlify.app">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Linkbrary">
+    <meta name="twitter:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요">
+    <meta name="twitter:image" content="https://www.freeiconspng.com/uploads/links-icon-30.jpg">
 </head>
 <body>
     <header class="navbar">
@@ -148,7 +157,7 @@
                                         <p class="modal_header_title">링크 삭제</p>
                                         <p class="modal_header_subtitle">링크 주소</p>
                                     </div>
-                                    <button class="modal_btn">삭제하기</button>
+                                    <button class="modal_delete_btn">삭제하기</button>
                                 </div>
                             </div>
                         </div>
