Add : Script change

--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
             <div class="main_sub_nav">
                 <p>전체</p>
                 <div class="main_sub_nav_side">
-                    <div class="main_sub_nav_side_items" id="shareFolderBtn">
+                    <button class="main_sub_nav_side_items" id="shareFolderBtn">
                         <img src="./src/images/share.svg" width="18" height="18" alt="폴더 공유"/>
                         공유
-                    </div>
-                    <div class="main_sub_nav_side_items">
+                    </button>
+                    <button class="main_sub_nav_side_items">
                         <img src="./src/images/pen.svg" width="18" height="18" alt="폴더 이름 변경"/>
                         이름 변경
-                    </div>
-                    <div class="main_sub_nav_side_items">
+                    </button>
+                    <button class="main_sub_nav_side_items">
                         <img src="./src/images/delete.svg" width="18" height="18" alt="폴더 삭제"/>
                         삭제
-                    </div>
+                    </button>
                 </div>
             </div>                                                 
             <div id="shareFolderModal" class="modal">
