Add : index.html 반응형 Update

--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
         </a>        
     </header>
     <main>
-        <p class="main_txt"><span class="main_txt_gra">세상의 모든 정보</span>를</p>
-        <p class="main_txt">쉽게 저장하고 관리해 보세요</p>
+        <div class="main_txt_box">
+            <p class="main_txt">
+                <span class="main_txt_gra">세상의 모든 정보</span>를<br> 쉽게 저장하고 관리해 보세요
+            </p>
+        </div>
         <a href="./src/sign/signup.html">
             <button class="main_add_btn" >링크 추가하기</button>
         </a>
@@ -306,55 +309,47 @@
         </section>
         <article>
             <div class="a_frame mt">
-                <div class="a_frame_txt_container">
-                    <p class="a_frame_txt"><span class="a_frame_txt_gra1">원하는 링크</span>를 저장하세요</p>
-                    <p class="a_frame_subtxt">
-                        나중에 읽고 싶은 글, 다시 보고 싶은 영상,
-                        사고 싶은 옷, 기억하고 싶은 모든 것을
-                        한 공간에 저장하세요.
-                    </p>
-                </div>
+                <p class="a_frame_txt"><span class="a_frame_txt_gra1">원하는 링크</span>를 저장하세요</p>
+                <p class="a_frame_subtxt">
+                    나중에 읽고 싶은 글, 다시 보고 싶은 영상,
+                    사고 싶은 옷, 기억하고 싶은 모든 것을
+                    한 공간에 저장하세요.
+                </p>
                 <img src="./src/images/a.png" class="article_img">
             </div>
         </article>
         <article>
             <div class="b_frame">
                 <img src="./src/images/b.png" class="article_img">
-                <div class="b_frame_txt_container">
-                    <p class="b_frame_txt">링크를 폴더로 <span class="b_frame_txt_gra1">관리</span>하세요</p>
-                    <p class="b_frame_subtxt">
-                        나만의 폴더를 무제한으로 만들고 
-                        다양하게 활용할 수 있습니다.
-                    </p>
-                </div>
+                <p class="b_frame_txt">링크를 폴더로 <span class="b_frame_txt_gra1">관리</span>하세요</p>
+                <p class="b_frame_subtxt">
+                    나만의 폴더를 무제한으로 만들고 
+                    다양하게 활용할 수 있습니다.
+                </p>
             </div>
         </article>
         <article>
             <div class="a_frame">
-                <div class="a_frame_txt_container">
-                    <p class="a_frame_txt">저장한 링크를 <span class="a_frame_txt_gra2">공유</span>해 보세요</p>
-                    <p class="a_frame_subtxt">
-                        여러 링크를 폴더에 담고 공유할 수 있습니다. 
-                        가족, 친구, 동료들에게 쉽고 빠르게 링크를 공유해 보세요.
-                    </p>
-                </div>
+                <p class="a_frame_txt">저장한 링크를 <span class="a_frame_txt_gra2">공유</span>해 보세요</p>
+                <p class="a_frame_subtxt">
+                    여러 링크를 폴더에 담고 공유할 수 있습니다. 
+                    가족, 친구, 동료들에게 쉽고 빠르게 링크를 공유해 보세요.
+                </p>
                 <img src="./src/images/c.png" class="article_img">                                                  
             </div>
         </article>
         <article>
             <div class="b_frame">
                 <img src="./src/images/d.png" class="article_img">
-                <div class="b_frame_txt_container">
-                    <p class="b_frame_txt">저장한 링크를 <span class="b_frame_txt_gra1">검색</span>해보세요</p>
-                    <p class="b_frame_subtxt">
-                        중요한 정보들을 검색으로 쉽게 찾아보세요.
-                    </p>
-                </div>
+                <p class="b_frame_txt">저장한 링크를 <span class="b_frame_txt_gra1">검색</span>해보세요</p>
+                <p class="b_frame_subtxt">
+                    중요한 정보들을 검색으로 쉽게 찾아보세요.
+                </p>
             </div>
         </article>
     </main>
     <footer>
-        <div class="footer_codeit ">©codeit - 2024</div>
+        <span class="footer_codeit">©codeit - 2024</span>
         <div class="footer_center_div">
             <a href="/privacy" class="footer_txt">Privacy Policy</a>
             <a href="/faq" class="footer_txt">FAQ</a>
