전역에 쓰이는 설정용 css 새로운 파일에 작성
- global.css 작성
- 모든 페이지에서 쓰이는 설정 모음
- global.css에 작성된 설정은 나머지 각각의 css에서 제거

--- a/weekly_mission/index.html
+++ b/weekly_mission/index.html
@@ -5,6 +5,7 @@
 	<link rel='stylesheet'
 		href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
 	<link href="css/nav.css" rel="stylesheet">
+	<link href="css/global.css" rel="stylesheet">
 	<meta name="description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요.">
 	<meta name="keywords" content="도서관, 책, 정보, 데이터베이스">
 	<meta name="author" content="SeungRyeolBaek">
