--- a/weekly_mission/login.html
+++ b/weekly_mission/login.html
@@ -8,6 +8,7 @@
 		href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
 	<link href="css/login_signup.css" rel="stylesheet">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+	<link href="css/global.css" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="js/password-visible.js"></script>
 	<meta name="description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요.">
