--- a/weekly_mission/index.html
+++ b/weekly_mission/index.html
@@ -141,16 +141,16 @@
 			</div>
 			<div class="footer-Icons">
 				<a class="footer-icon" href="https://www.facebook.com/" target="_blank">
-					<img src="images/facebook_logo.svg">
+					<img src="images/facebook_logo.svg" alt="페이스북 로고">
 				</a>
 				<a class="footer-icon" href="https://twitter.com/?lang=ko" target="_blank">
-					<img src="images/twitter_logo.svg">
+					<img src="images/twitter_logo.svg" alt="트위터 로고">
 				</a>
 				<a class="footer-icon" href="https://www.youtube.com/" target="_blank">
-					<img src="images/youtube_logo.svg">
+					<img src="images/youtube_logo.svg" alt="유튜브 로고">
 				</a>
 				<a class="footer-icon" href="https://www.instagram.com/" target="_blank">
-					<img src="images/instagram_logo.svg">
+					<img src="images/instagram_logo.svg" alt="인스타그램 로고">
 				</a>
 			</div>
 		</div>
