--- a/weekly_mission/login.html
+++ b/weekly_mission/login.html
@@ -32,7 +32,7 @@
 		<div class="frame1">
 			<div class="logo-and-link">
 				<a class="logo" href="index.html">
-					<img src="images/Linkbrary.svg">
+					<img src="images/Linkbrary.svg" alt="Link-brary 로고">
 				</a>
 				<div class="link-container">
 					<div class="non-link">
@@ -68,10 +68,10 @@
 			<div class="small-text">소셜 로그인</div>
 			<div class="logos">
 				<a href="https://www.google.com/">
-					<img src="images/google_logo.svg">
+					<img src="images/google_logo.svg" alt="구글 소셜 로그인 링크">
 				</a>
 				<a href="https://www.kakaocorp.com/page/">
-					<img src="images/kakao_logo.svg">
+					<img src="images/kakao_logo.svg" alt="카카오 소셜 로그인 링크">
 				</a>
 			</div>
 		</div>
