--- a/weekly_mission/signup.html
+++ b/weekly_mission/signup.html
@@ -31,7 +31,7 @@
 		<div class="frame1">
 			<div class="logo-and-link">
 				<a class="logo" href="index.html">
-					<img src="images/Linkbrary.svg">
+					<img src="images/Linkbrary.svg" alt="Link-brary 로고">
 				</a>
 				<div class="link-container">
 					<div class="non-link">
@@ -76,10 +76,10 @@
 			<div class="small-text">다른 방식으로 가입하기</div>
 			<div class="logos">
 				<a href="https://www.google.com/">
-					<img src="images/google_logo.svg">
+					<img src="images/google_logo.svg" alt="구글 sns 링크">
 				</a>
 				<a href="https://www.kakaocorp.com/page/">
-					<img src="images/kakao_logo.svg">
+					<img src="images/kakao_logo.svg" alt="카카오 sns 링크">
 				</a>
 			</div>
 		</div>
