랜딩페이지의 로그인 버튼/바로가기 버튼 태그 변경
- button 태그에서 a 태그로 변경
- button태그, a태그에 대해 cursor: pointer; 일괄 적용 (global.css에 작성) & 각 파일의 관련 내용 삭제

--- a/weekly_mission/index.html
+++ b/weekly_mission/index.html
@@ -21,16 +21,16 @@
 	<meta property="twitter:url" content="https://main--seungryeolbaek-sprint-weekly.netlify.app/" />
 </head>
 
+<link href="css/nav.css" rel="stylesheet">
+
 <nav class="nav">
 	<div class="nav-container">
 		<a class="nav-logo" href="index.html">
 			<img src="images/Linkbrary.svg">
 		</a>
-
-		<button class="nav-login_button" onclick="location.href = 'login.html'">
+		<a class="nav-login_button" href='login.html'>
 			<p class="nav-login-label">로그인</p>
-		</button>
-
+		</a>
 	</div>
 </nav>
 
@@ -43,9 +43,9 @@
 		<p class="first-line"><span class="colored-text-1">세상의 모든 정보</span>를</p>
 		<p class="second-line">쉽게 저장하고 관리해 보세요</p>
 	</div>
-	<button class="landing-1-btn" onclick="location.href = 'signup.html'">
+	<a class="landing-1-btn" onclick="location.href = 'signup.html'">
 		<p class="label">링크 추가하기</p>
-	</button>
+	</a>
 	<div class="landing-1-img">
 		<img src="images/image_25.png">
 	</div>
