--- a/weekly_mission/nav.html
+++ b/weekly_mission/nav.html
@@ -9,9 +9,9 @@
 			<img src="images/Linkbrary.svg">
 		</a>
 
-		<button class="nav-login_button" onclick="location.href = 'login.html'">
+		<a class="nav-login_button" href = 'login.html'>
 			<p class="nav-login-label">로그인</p>
-		</button>
+		</a>
 
 	</div>
 </nav>
