-meta 태그 이미지 설정완료
-공유 시 관련 이미지 보이게 됨

--- a/weekly_mission/index.html
+++ b/weekly_mission/index.html
@@ -11,13 +11,13 @@
 	<meta name="author" content="SeungRyeolBaek">
 	<meta property="og:title" content="Linkbrary" />
 	<meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요." />
-	<!-- <meta property="og:image" content="이미지_URL" /> -->
+	<meta property="og:image" content="site-meta-image.jpg" />
 	<meta property="og:url" content="https://main--seungryeolbaek-sprint-weekly.netlify.app/" />
 	<meta property="og:type" content="website" />
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Linkbrary">
 	<meta name="twitter:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요.">
-	<!-- <meta name="twitter:image" content="이미지_URL"> -->
+	<meta name="twitter:image" content="site-meta-image.jpg">
 	<meta property="twitter:url" content="https://main--seungryeolbaek-sprint-weekly.netlify.app/" />
 </head>
 
