Organize files, correct typos, and delete duplicate codes

--- a/signin.html
+++ b/signin.html
@@ -3,20 +3,19 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width", initial-scale="1.0">
   <title>Linkbrary</title>
   <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
   <link rel="stylesheet" as="style" crossorigin
     href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
   <link href='https://fonts.googleapis.com/css?family=Acme' rel='stylesheet'>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-  <link rel="stylesheet" href="signin.css">
+  <link rel="stylesheet" href="css/signin.css">
 </head>
 
 <body>
   <div class="main">
-    <a href="lending.html" class="logo"><img src="logo.png" alt="logo" width="210.58" height="38"></a>
+    <a href="Linkbrary.html" class="logo"><img src="image/logo.png" alt="logo" width="210.58" height="38"></a>
     <div class="sign_up">
       <p>회원이 아니신가요?</p>
       <a href="signup.html">회원 가입하기</a>
@@ -33,10 +32,10 @@
       <p>소셜 로그인</p>
       <div class="icon">
         <a href="https://www.google.com/" target="_blank">
-          <img src="Component 2.png" alt="google icon" width="42" height="42">
+          <img src="image/Component 2.png" alt="google icon" width="42" height="42">
         </a>
         <a href="https://www.kakaocorp.com/page/" target="_blank">
-          <img src="Component 3.png" alt="kakao icon" width="42" height="42">
+          <img src="image/Component 3.png" alt="kakao icon" width="42" height="42">
         </a>
       </div>
     </div>
