--- a/Linkbrary.html
+++ b/Linkbrary.html
@@ -3,18 +3,18 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width", initial-scale="1.0">
   <title>Linkbrary</title>
   <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
   <link rel="stylesheet" as="style" crossorigin
     href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
   <link href='https://fonts.googleapis.com/css?family=Acme' rel='stylesheet'>
-  <link rel="stylesheet" href="lending.css">
+  <link rel="stylesheet" href="css/Linkbrary.css">
 </head>
 
 <body>
   <header>
-    <a href="lending.html" class="logo"><img src="logo.png" alt="로고" width="133" height="24"></a>
+    <a href="Linkbrary.html" class="logo"><img src="image/logo.png" alt="로고" width="133" height="24"></a>
     <a href="signup.html">
       <button type="submit" class="login_btn">로그인</button>
     </a>
@@ -26,7 +26,7 @@
         <a href="signin.html"><button type="submit" class="link_plus_btn">링크 추가하기</button></a>
       </div>
       <div>
-        <img src="img.png" alt="link search" class="link_search" width="1200" height="590">
+        <img src="image/img.png" alt="link search" class="link_search" width="1200" height="590">
       </div>
     </div>
     <div class="section_2">
@@ -40,14 +40,14 @@
           </p>
         </div>
         <div class="img">
-          <img src="img1.png" alt="save link" width="550" height="450">
+          <img src="image/img1.png" alt="save link" width="550" height="450">
         </div>
       </div>
     </div>
     <div class="section_3">
       <div class="middle">
         <div class="img">
-          <img src="img2.png" alt="folder link" width="550" height="450">
+          <img src="image/img2.png" alt="folder link" width="550" height="450">
         </div>
         <div class="text">
           <h3>링크를 폴더로<br><span>관리</span>하세요</h3>
@@ -69,14 +69,14 @@
           </p>
         </div>
         <div class="img">
-          <img src="img3.png" alt="share link" width="550" height="450">
+          <img src="image/img3.png" alt="share link" width="550" height="450">
         </div>
       </div>
     </div>
     <div class="section_5">
       <div class="middle">
         <div class="img">
-          <img src="img4.png" alt="find link" width="550" height="450">
+          <img src="image/img4.png" alt="find link" width="550" height="450">
         </div>
         <div class="text">
           <h3>저장한 링크를<br><span>검색</span>해 보세요</h3>
@@ -99,16 +99,16 @@
       </div>
       <div class="footer_link">
         <a href="https://www.facebook.com/" target="_blank">
-          <img src="facebook.png" alt="페이스북 링크" width="20" height="20">
+          <img src="image/facebook.png" alt="페이스북 링크" width="20" height="20">
         </a>
         <a href="https://www.twitter.com/" target="_blank">
-          <img src="twitter.png" alt="트위터 링크" width="20" height="20">
+          <img src="image/twitter.png" alt="트위터 링크" width="20" height="20">
         </a>
         <a href="https://www.youtube.com/" target="_blank">
-          <img src="youtube.png" alt="유튜브 링크" width="20" height="20">
+          <img src="image/youtube.png" alt="유튜브 링크" width="20" height="20">
         </a>
         <a href="https://www.instagram.com/" target="_blank">
-          <img src="instragram.png" alt="인스타그램 링크" width="20" height="20">
+          <img src="image/instragram.png" alt="인스타그램 링크" width="20" height="20">
         </a>
       </div>
     </div>
